--- a/work_1/app/src/main/res/values/strings.xml
+++ b/work_1/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
-    <string name="app_name">work_1</string>
+    <string name="app_name">My Application</string>
+    <string name="button_text">Click</string>
+    <string name="Message_text">Message</string>
+    <string name="textview">TextView</string>
 </resources>
